# scream-queens

./: .gitignore  README.md  docker-compose.yml  estrutura_projeto.txt  pyproject.toml  requirements.txt  ruff.toml
api/: server.js
api/routes/: jobs.js  rankings.js  screamQueens.js
apps/worker/: worker.py
data/sample/: processed_scream_queens_clean.json
db/migrations/: 003_add_attempts_to_jobs.sql
docs/: ideas.md
domain/: runRanking.js
domain/filters/: filterActiveInPeriod.js  filterByCareerSpan.js  filterBySurvival.js
domain/ranking/: rankByCareerSpan.js  rankByFilmCount.js  rankingsRegistry.js
domain/utils/: dataLoader.js
dsa/: actressIndex.js  ranking.js  runRanking.js  searchByActress.js
dsa/filters/: filterActiveInPeriod.js  filterByBoxOffice.js  filterByCareerSpan.js  filterByFilmCount.js  filtersBySurvival.js  filtersRegistry.js
dsa/rankings/: coordinate.js  rankByBoxOffice.js  (+4 more)
pipeline/: setup_dirs.py
scraping/: config.py  main.py  utils.py
scripts/: enqueue_all_queens.sh  full_pipeline.sh  generate_manual_results.py  generate_survived_template.py  horrorverse_pipeline.sh  master_pipeline.sh  process_final_data.py  rebuild_survived_data.py  recompute_all_queens.sh  recompute_stats.py  remove_survived_field.py  reset_and_run_pipeline.sh  reset_db.sh  show_top.py  start_horrorverse.sh  survived_search_template.py  test_jobs.sh  update_survival_stats.py  update_survived.py  watch_jobs.sh
src/: config.py  fetch.py  filters.py  main.py  omdb_ok.py  parse.py  test_omdb.py  utils.py
src/db/: db.js  (+1 more)
tests/: test_megumi.py  test_scraper.py
(+66 files in other folders)
