[project]
name = "scream_queens"
version = "0.1.0"
description = "Horrorverse scraping and DB pipeline"
authors = [{name="Cristiano Noga"}]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 88
indent-width = 4
select = ["E", "F", "W"]
ignore = ["E501"]
fix = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
